--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,7 +41,7 @@ jobs:
       - name: 봇 실행하기
         env:
           TELEGRAM_TOKEN: ${{ secrets.TELEGRAM_TOKEN }}
-          CHANNEL_CHAT_ID: ${{ secrets.CHANNEL_CHAT_ID }}
+          CHANNEL_CHAT_ID: ${{ secrets.PERSONAL_CHAT_ID }}
         run: |
           echo "=== Python 실행 시작 ==="
           python --version
@@ -55,6 +55,6 @@ jobs:
           git config --global user.name "Hotel Bot"
           git config --global user.email "bot@noreply.github.com"
           git add price_history.json
-          git commit -m "가격 정보 업데이트" || echo "변경 없음"
+          git diff --quiet && git diff --staged --quiet || git commit -m "가격 정보 업데이트 $(date +'%Y-%m-%d %H:%M')"
           git pull --rebase
           git push
