--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,59 +2,63 @@ name: 호텔 가격 알리미 (테스트)
 
 on:
   schedule:
-    # 매일 한국 시간 오전 8시 (UTC 23:00)
     - cron: '0 23 * * *'
-  workflow_dispatch: # 수동 실행 버튼
+  workflow_dispatch:
+    inputs:
+      target:
+        description: "메시지 전송 대상 (personal=개인, channel=채널)"
+        required: true
+        default: "personal"
+        type: choice
+        options:
+          - personal
+          - channel
 
 jobs:
   run-bot:
     runs-on: ubuntu-latest
-    
     permissions:
       contents: write
-    
+
     steps:
       - name: 코드 가져오기
         uses: actions/checkout@v4
-      
+
       - name: 파이썬 설치
         uses: actions/setup-python@v4
         with:
           python-version: '3.9'
-      
+
       - name: 크롬 및 ChromeDriver 설치
         run: |
           sudo apt-get update
-          sudo apt-get install -y chromium-browser chromium-chromedriver
-          echo "=== Chrome 확인 ==="
-          which chromium-browser
-          chromium-browser --version
-          echo "=== ChromeDriver 확인 ==="
-          which chromedriver
-          chromedriver --version
-          echo "=== 경로 확인 ==="
-          ls -la /usr/bin/chromium* /usr/bin/chromedriver
-      
+          sudo apt-get install -y chromium-browser chromium-chromedriver || \
+          sudo apt-get install -y chromium chromium-driver
+
       - name: 라이브러리 설치
         run: pip install -r requirements.txt
-      
+
       - name: 봇 실행하기
         env:
           TELEGRAM_TOKEN: ${{ secrets.TELEGRAM_TOKEN }}
           CHANNEL_CHAT_ID: ${{ secrets.CHANNEL_CHAT_ID }}
-        run: |
-          echo "=== Python 실행 시작 ==="
-          python --version
-          echo "=== main.py 존재 확인 ==="
-          ls -la main.py
-          echo "=== 실행 ==="
-          python main.py
-      
+          PERSONAL_CHAT_ID: ${{ secrets.PERSONAL_CHAT_ID }}
+          TARGET: ${{ github.event_name == 'schedule' && 'channel' || inputs.target }}
+        run: python main.py
+
       - name: 가격 정보 저장
+        if: always()
+        env:
+          TZ: Asia/Seoul
         run: |
-          git config --global user.name "Hotel Bot"
-          git config --global user.email "bot@noreply.github.com"
-          git add price_history.json
-          git diff --quiet && git diff --staged --quiet || git commit -m "가격 정보 업데이트 $(date +'%Y-%m-%d %H:%M')"
+          git config user.name "Hotel Bot"
+          git config user.email "bot@noreply.github.com"
+          test -f price_history.json || echo '{}' > price_history.json
           git pull --rebase
+          git add price_history.json
+          if git diff --staged --quiet; then
+            echo "No changes to commit."
+            exit 0
+          fi
+          git commit -m "가격 정보 업데이트 $(date +'%Y-%m-%d %H:%M KST')"
           git push
